--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     {% include head.html %}
+    <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
   </head>
   <body>
     {% include header.html %}
