--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
 /* Global background */
 body {
-  background-color: #f4f4f4;   /* page background */
+  background-color: #8D9FBA;   /* page background */
 }
 
 /* Header background */
 .site-header {
-  background-color: #ffffff;   /* header background */
+  background-color: #09223D;   /* header background */
 }
 
 /* Header text + nav */
