--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 /* Global background */
 body {
-  background-color: #DAE2F2;   /* page background */
+  background-color: #ABB5C9;   /* page background */
 }
 
 /* Header background */
