Change font-family from 'Space Grotesk' to 'Sora'

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 /* Global background */
 body {
   background-color: #ABB5C9;   /* page background */"
-  font-family: 'Space Grotesk', system-ui, sans-serif;
+  font-family: 'Sora', system-ui, sans-serif;
 }
 
 /* Header background */
