Change background color of the body element

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
    ========================= */
 
 body {
-  background-color: #D5D5E6; /* page background */
+  background-color: #E5E6FF; /* page background */
   font-family: 'Sora', system-ui, sans-serif;
   margin: 0;
   color: #111;
