--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<article class="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    {% if page.description %}<p>{{ page.description }}</p>{% endif %}
+<article class="project-page">
+  <header>
+    <h1>{{ page.title }}</h1>
+    {% if page.description %}
+      <p class="project-subtitle">{{ page.description }}</p>
+    {% endif %}
   </header>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+  {{ content }}
 </article>
